{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 2215,
  "lineage": "ac9a7936-6cad-cb56-b382-7f3a056b43c6",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "crowd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:listener/app/ai-alb-dev-crowd/40996ca48cf30895/55ca8ff1266330cf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-crowd/5061cc28a503c403",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:listener/app/ai-alb-dev-crowd/40996ca48cf30895/55ca8ff1266330cf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-crowd/40996ca48cf30895",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_alb_target_group.crowd",
            "module.cluster.aws_lb.crowd",
            "module.networking.aws_security_group.ai-alb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "frontliner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:listener/app/ai-alb-dev-frontliner/184fd137a61ce97d/455b69d083767d4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-frontliner/670f37f2f3acf1c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:listener/app/ai-alb-dev-frontliner/184fd137a61ce97d/455b69d083767d4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-frontliner/184fd137a61ce97d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_alb_target_group.frontliner",
            "module.cluster.aws_lb.frontliner",
            "module.networking.aws_security_group.ai-alb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "model",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:listener/app/ai-alb-dev-model/ae24473d8c7b2376/470e215c4b5b5098",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-model/c8af35f2048dead3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:listener/app/ai-alb-dev-model/ae24473d8c7b2376/470e215c4b5b5098",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-model/ae24473d8c7b2376",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_alb_target_group.model",
            "module.cluster.aws_lb.model",
            "module.networking.aws_security_group.ai-alb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "crowd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-crowd/5061cc28a503c403",
            "arn_suffix": "targetgroup/ai-alb-tg-dev-crowd/5061cc28a503c403",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-crowd/5061cc28a503c403",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ai-alb-tg-dev-crowd",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "frontliner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-frontliner/670f37f2f3acf1c1",
            "arn_suffix": "targetgroup/ai-alb-tg-dev-frontliner/670f37f2f3acf1c1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-frontliner/670f37f2f3acf1c1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ai-alb-tg-dev-frontliner",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "model",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-model/c8af35f2048dead3",
            "arn_suffix": "targetgroup/ai-alb-tg-dev-model/c8af35f2048dead3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:targetgroup/ai-alb-tg-dev-model/c8af35f2048dead3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ai-alb-tg-dev-model",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "crowd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-crowd/40996ca48cf30895",
            "arn_suffix": "app/ai-alb-dev-crowd/40996ca48cf30895",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ai-alb-dev-crowd-1046040624.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-crowd/40996ca48cf30895",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ai-alb-dev-crowd",
            "security_groups": [
              "sg-0e9a650311ec29a15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c025a9597f807ee"
              },
              {
                "subnet_id": "subnet-0ab31d046752ef5d8"
              }
            ],
            "subnets": [
              "subnet-01c025a9597f807ee",
              "subnet-0ab31d046752ef5d8"
            ],
            "vpc_id": "vpc-0208c9c9e6c08cbc9",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking.aws_security_group.ai-alb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontliner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-frontliner/184fd137a61ce97d",
            "arn_suffix": "app/ai-alb-dev-frontliner/184fd137a61ce97d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ai-alb-dev-frontliner-195365957.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-frontliner/184fd137a61ce97d",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ai-alb-dev-frontliner",
            "security_groups": [
              "sg-0e9a650311ec29a15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c025a9597f807ee"
              },
              {
                "subnet_id": "subnet-0ab31d046752ef5d8"
              }
            ],
            "subnets": [
              "subnet-01c025a9597f807ee",
              "subnet-0ab31d046752ef5d8"
            ],
            "vpc_id": "vpc-0208c9c9e6c08cbc9",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking.aws_security_group.ai-alb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "model",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-model/ae24473d8c7b2376",
            "arn_suffix": "app/ai-alb-dev-model/ae24473d8c7b2376",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ai-alb-dev-model-556874561.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:633470416642:loadbalancer/app/ai-alb-dev-model/ae24473d8c7b2376",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ai-alb-dev-model",
            "security_groups": [
              "sg-0e9a650311ec29a15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c025a9597f807ee"
              },
              {
                "subnet_id": "subnet-0ab31d046752ef5d8"
              }
            ],
            "subnets": [
              "subnet-01c025a9597f807ee",
              "subnet-0ab31d046752ef5d8"
            ],
            "vpc_id": "vpc-0208c9c9e6c08cbc9",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking.aws_security_group.ai-alb",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c6e51ead5bb2f9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00e51ffa802a7854d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c6e51ead5bb2f9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_route_table.private_rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-080a4b813ba0c4a601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00e51ffa802a7854d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080a4b813ba0c4a60",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_route_table.private_rt"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633470416642:route-table/rtb-08c6e51ead5bb2f9c",
            "id": "rtb-08c6e51ead5bb2f9c",
            "owner_id": "633470416642",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "[ai]-rtb-dev-private-80"
            },
            "tags_all": {
              "Name": "[ai]-rtb-dev-private-80"
            },
            "timeouts": null,
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633470416642:route-table/rtb-080a4b813ba0c4a60",
            "id": "rtb-080a4b813ba0c4a60",
            "owner_id": "633470416642",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "[ai]-rtb-dev-private-96"
            },
            "tags_all": {
              "Name": "[ai]-rtb-dev-private-96"
            },
            "timeouts": null,
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cef29354f961501c",
            "route_table_id": "rtb-08c6e51ead5bb2f9c",
            "subnet_id": "subnet-0ab31d046752ef5d8"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4ba71b76de54098",
            "route_table_id": "rtb-080a4b813ba0c4a60",
            "subnet_id": "subnet-01c025a9597f807ee"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ai-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633470416642:security-group/sg-0e9a650311ec29a15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9a650311ec29a15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "[ai]-sg-dev-alb",
            "name_prefix": "",
            "owner_id": "633470416642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "[ai]-sg-test-alb"
            },
            "tags_all": {
              "Name": "[ai]-sg-test-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ai-ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633470416642:security-group/sg-05105d84d1f5f3948",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05105d84d1f5f3948",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "[ai]-sg-dev-ecsTask",
            "name_prefix": "",
            "owner_id": "633470416642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "[ai]-sg-test-ecsTask"
            },
            "tags_all": {
              "Name": "[ai]-sg-test-ecsTask"
            },
            "timeouts": null,
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633470416642:subnet/subnet-0ab31d046752ef5d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.69.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab31d046752ef5d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633470416642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "[ai]-subnet-dev-pitik-private-80"
            },
            "tags_all": {
              "Name": "[ai]-subnet-dev-pitik-private-80"
            },
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:633470416642:subnet/subnet-01c025a9597f807ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.69.96.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c025a9597f807ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633470416642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "[ai]-subnet-dev-pitik-private-96"
            },
            "tags_all": {
              "Name": "[ai]-subnet-dev-pitik-private-96"
            },
            "vpc_id": "vpc-0208c9c9e6c08cbc9"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    }
  ]
}